# coding_challenge_backend_1_mvpmatch

./: .env  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  manage.py  pre_commit.sh  pyproject.toml  requirements.txt  setup.cfg
app/: __init__.py  decorators.py  errors.py  models.py  operations.py  responses.py  schemas.py  utils.py
app/api/: __init__.py  product.py  user.py
app/enums/: UserRoles.py
migrations/versions/: 735313da27b1_.py  9b37682d2abf_a.py
tests/: conftest.py
tests/api/: test_other.py  test_product.py  test_user.py
